syntax = "proto3";

package communication;

service ReplicationService {
  rpc PropagateData(PropagateDataRequest) returns (PropagateDataResponse);
  rpc GossipChanges(GossipChangesRequest) returns (GossipChangesResponse);
  rpc GossipBatch(GossipBatchRequest) returns (GossipBatchResponse);
}

message ProtoDot {
  string node_id = 1;
  uint64 counter = 2;
}

message ProtoDotSet {
  repeated ProtoDot dots = 1;
}

message PNCounterMessage {
  map<string, uint64> p = 1;
  map<string, uint64> n = 2;
}

message AWSetMessage {
  uint64 clock = 1;
  map<string, ProtoDotSet> add_tags = 2;
  map<string, ProtoDotSet> remove_tags = 3;
}

message CRDTData {
  oneof data { //this is the enum data
    PNCounterMessage pn_counter = 1;
    AWSetMessage aw_set = 2;
    LWWRegisterMessage lww_register = 3;
  }
}

message ProtoRegisterDot {
  string node_id = 1;
  uint64 counter = 2;
  string register = 3;
}

message LWWRegisterMessage {
  uint64 clock = 1;
  ProtoRegisterDot register_state = 2;
}

message PropagateDataRequest {
  string valuetype = 1;
  string key = 2;
  bytes value = 3;
}

message PropagateDataResponse {
  bool success = 1;
  bytes response = 2;
}

message GossipChangesRequest {
  string key = 1;
  CRDTData counter = 2;
}

message GossipChangesResponse {
  bool success = 1;
}

message GossipBatchRequest {
  map<string, CRDTData> batch = 1;
}

message GossipBatchResponse {
  bool success = 1;
}
